feat(세션): 관리자기능만 추가